# stm-mcp

./: .gitignore  LICENSE  README.md  dev_notes.txt  pyproject.toml
sample_response_etatservice/: response_1769215277365.json
src/stm_mcp/: __init__.py  app.py  server.py
src/stm_mcp/data/: __init__.py  cache.py  config.py  database.py  gtfs_loader.py  gtfsrt_client.py  i3_client.py
src/stm_mcp/matching/: __init__.py  direction_matcher.py  models.py  normalizers.py  route_matcher.py  search_index.py  stop_matcher.py
src/stm_mcp/models/: __init__.py  alerts.py  gtfs.py  realtime.py  responses.py
src/stm_mcp/services/: alerts_service.py  arrivals_service.py  realtime_service.py  schedule_service.py  stop_service.py  trip_planner.py
src/stm_mcp/swagger/: swagger_etat_du_service_v2_pr.json  swagger_gtfs-realtime_v2_pr.json
src/stm_mcp/tools/: alerts_tools.py  arrivals_tools.py  resolution_tools.py  schedule_tools.py  stop_tools.py  trip_tools.py
tests/: __init__.py  test_alerts_service.py  test_alerts_tools.py  test_arrivals_service.py  test_cache.py  test_direction_matcher.py  test_gtfs_loader.py  test_gtfsrt_client.py  test_i3_client.py  test_normalizers.py  test_realtime_service.py  test_route_matcher.py  test_schedule_service.py  test_search_index.py  test_server.py  test_stop_matcher.py  test_stop_tools.py  test_trip_planner.py
